
- Add an optional separator before the copied message.

- Add a newline after the response message and after the copied header,
  to make sure there is at least one blank line between them.

- The MySQL autoresponder now supports an optional table name prefix to
  better interoperate with other applications using the same database.

- Added support for a log file or table that is not pruned.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.97

- Completely rewrote header handling, improving its handling of headers
  split across multiple lines among other things.

- Added support for omitting parts of the copied headers.

- Internal MIME headers are now stripped from multipart messages.

- Added support for limiting the number of lines copied from the
  original message body.

- Added support for setting autoresponder options through files.

- Added an option to control the generation of the In-Reply-To: header.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.96.2

- Fixed up the multi-line strings that no longer compile with recent
  compilers.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.96.1

- Added missing MySQL schema to package.

- Switched to new bglibs (1.006) library usage.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.96
