@@ -17,6 +17,8 @@ Changes in version 0.98
 
 - Added support for a log file or table that is not pruned.
 
+- Updated for bglibs v2.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
